@@ -1,6 +1,6 @@
 Package: zyp
-Version: 0.9.1-1
-Date: 2011-09-21
+Version: 0.10-1
+Date: 2013-09-18
 Title: Zhang + Yue-Pilon trends package
 Author: David Bronaugh <bronaugh@uvic.ca>, Arelia Werner <wernera@uvic.ca> for the Pacific Climate Impacts Consortium
 Maintainer: David Bronaugh <bronaugh@uvic.ca>
